# TrackMyTrain

./: .gitignore  README.md
client/: index.html  script.js  style.css
server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
server/api/: HttpClient.cpp  HttpClient.h  RailwayApiClient.cpp  RailwayApiClient.h
server/config/: AppConfig.cpp  AppConfig.h
server/controllers/: PNRController.cpp  PNRController.h  SeatController.cpp  SeatController.h  StationController.cpp  StationController.h  TrainController.cpp  TrainController.h
server/models/: Fare.h  LiveStatus.h  PNR.h  Passenger.h  Route.h  ScheduleEntry.h  SeatAvailability.h  Station.h  StationActivity.h  Train.h  TrainClass.h
server/services/: PNRService.cpp  PNRService.h  SeatService.cpp  SeatService.h  StationService.cpp  StationService.h  TrainService.cpp  TrainService.h
server/test_data/: fare.json  live_station.json  live_status.json  pnr_status.json  search_station.json  search_train.json  seat_availability.json  seat_availability_v2.json  train_classes.json  train_schedule.json  train_schedule_v2.json  trains_between_stations.json  trains_by_station.json
server/utils/: JsonParser.cpp  JsonParser.h  Logger.cpp  Logger.h
